src/test/ui/parser/issue-32214.stderr
error: generic arguments must come before the first constraint
  --> $DIR/issue-32214.rs:3:34
   |
LL | pub fn test<W, I: Trait<Item=(), W> >() {}
   |                         -------  ^ generic argument
   |                         |
   |                         the first constraint is provided here

error: aborting due to previous error

